[package]
name = "rust_web3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = { version = "1.18.2", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
futures-core = { version = "0.3", default-features = false }
http = "0.2"
http-body = "0.4"
httpdate = "1.0"
httparse = "1.6"
serde = { version = "1.0", features = ["derive"] }


# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"


[dev-dependencies]
pretty_env_logger = "0.4"
tower = { version = "0.4", features = ["make", "util"] }

[[example]]
name = "tower_client"
path = "examples/tower_client.rs"
required-features = ["full"]

[[example]]
name = "tower_server"
path = "examples/tower_server.rs"
required-features = ["full"]
